Functionality for mood Angry: - ListView & Adapter Structure - Music Class - List click listener - Angry intent to details page and back

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,10 @@
             android:label="@string/sad"
             android:parentActivityName=".MainActivity">
         </activity>
+        <activity android:name=".DetailsActivity"
+            android:label="@string/music_details"
+            android:parentActivityName=".MainActivity">
+        </activity>
     </application>
 
 </manifest>
